cleanup RMTest: rename launch name to avoid false alarm perf degradation reports after the test refactoring
GitOrigin-RevId: 5740eaffd9cdacb9bd5c6953c55de9125f5bc4b0